--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My First Azure Webpage</title>
+    <meta charset="UTF-8">
+    <title>Interactive Flask App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body>
-  <h1>Hello from Azure!</h1>
+<body class="bg-light">
+<div class="container mt-5">
+    <h1 class="text-primary">Interactive Flask App</h1>
+    <form id="greet-form" class="mt-3">
+        <label for="name" class="form-label">Enter your name:</label>
+        <input type="text" id="name" name="name" class="form-control" placeholder="Your name">
+        <button type="submit" class="btn btn-success mt-2">Greet Me</button>
+    </form>
+    <p id="greet-result" class="mt-3 fw-bold"></p>
+
+    <hr>
+    <button id="time-btn" class="btn btn-info">Get Current Time</button>
+    <p id="time-result" class="mt-2"></p>
+</div>
+
+<script>
+$(function() {
+    $("#greet-form").on("submit", function(e) {
+        e.preventDefault();
+        $.post("/greet", { name: $("#name").val() }, function(data) {
+            $("#greet-result").text(data.message);
+        });
+    });
+
+    $("#time-btn").on("click", function() {
+        $.get("/time", function(data) {
+            $("#time-result").text("Server time: " + data.time);
+        });
+    });
+});
+</script>
 </body>
 </html>
